--- a/file/default.css
+++ b/file/default.css
@@ -230,3 +230,23 @@ a {
     margin: 0;
     padding: 10px;
   }
+
+
+.audio-menu {
+  background-color: rgb(247, 182, 212); /* Color rosado claro para el menú */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #310021; /* Color de texto */
+}
+
+#audio-player {
+  width: 100%;
+  max-width: 600px; /* Ajusta el tamaño máximo del reproductor de audio */
+}
